# STUDY_langchain

./: README.md  pyproject.toml
STUDY_langchain/: main_1.py  main_2.py  math_server.py  sample_for_function_calling_1.py  sample_for_function_calling_2.py  sample_for_function_calling_3.py  topic_main.py
STUDY_langchain/prompts/: pickup_entities.txt  pickup_theme_candidates.txt
data/: entity_db.yaml  news_entity_samples.tsv  predicted.tsv  predicted_topic.tsv  topic_db.yaml  topic_samples.tsv
