[project]
name = "STUDY_langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "komot",email = "komotaymkty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "openai (>=1.74.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langchain-core (>=0.3.51,<0.4.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "STUDY_langchain"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
